kubernetes/circle-partner-navigator/components/express-mail-gateway/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-mail-gateway
  labels:
    app: express-mail-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express-mail-gateway
  template:
    metadata:
      labels:
        app: express-mail-gateway
    spec:
      serviceAccountName: cpn
      containers:
        - name: express-mail-gateway
          image: quay.io/opentelekomcloud/express-mail-gateway:0.0.1
          command:
            ["/bin/bash", "-c"]
          args:
            ['source /secrets/emg-env && npm run start']
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
          volumeMounts:
          - mountPath: "/secrets"
            name: "secrets"
          ports:
            - containerPort: 6000
      volumes:
        - name: vault-agent-config
          configMap:
            defaultMode: 420
            name: cpn-emg-vault-config
        - name: secrets
          emptyDir: {}
        - name: "k8-tokens"
          projected:
            defaultMode: 420
            sources:
            - serviceAccountToken:
                expirationSeconds: 7200
                path: "vault-token"
